--- a/code/02_population_interpolation.ipynb
+++ b/code/02_population_interpolation.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "e1697ce7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "8aacbbc0",
    "metadata": {},
    "outputs": [
     {
@@ -120,6 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "ad8910d1",
    "metadata": {
     "scrolled": false
    },
@@ -154,6 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "id": "5a4c0deb",
    "metadata": {},
    "outputs": [
     {
@@ -882,6 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "ec7010d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,6 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "c381d28e",
    "metadata": {},
    "outputs": [
     {
@@ -926,6 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "b0293e52",
    "metadata": {
     "scrolled": true
    },
@@ -991,6 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "e87d3781",
    "metadata": {
     "scrolled": true
    },
@@ -1013,6 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "22466564",
    "metadata": {},
    "outputs": [
     {
@@ -1030,6 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
+   "id": "3f9c3477",
    "metadata": {},
    "outputs": [
     {
@@ -1132,6 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "15061989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,6 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "6d7bf0c2",
    "metadata": {
     "scrolled": true
    },
@@ -1154,7 +1166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1168,7 +1180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.13"
   },
   "varInspector": {
    "cols": {
