Meta analysis start

--- a/code/02_population_interpolation.ipynb
+++ b/code/02_population_interpolation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "89561788",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "cb75cd5d",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "id": "4bc893fe",
    "metadata": {
     "scrolled": false
@@ -101,11 +101,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 4,
    "id": "50a854b1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "##################                assign population to weekly death rate data (at week 1)\n",
     "existing_arrons = week_mor_mun['ARRON'].value_counts().index\n",
     "week_mor_mun['population_t'] = np.nan\n",
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 5,
    "id": "64492caf",
    "metadata": {},
    "outputs": [
@@ -136,7 +137,7 @@
        "[(19, 54000), (20, 54000)]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "4c6b988c",
    "metadata": {
     "scrolled": true
@@ -156,53 +157,53 @@
     {
      "data": {
       "text/plain": [
-       "11000    1061\n",
-       "44000    1061\n",
-       "73000    1061\n",
-       "72000    1061\n",
-       "71000    1061\n",
-       "63000    1061\n",
-       "62000    1061\n",
-       "61000    1061\n",
-       "57000    1061\n",
-       "56000    1061\n",
-       "55000    1061\n",
-       "53000    1061\n",
-       "52000    1061\n",
-       "12000    1061\n",
-       "46000    1061\n",
-       "45000    1061\n",
-       "91000    1061\n",
-       "41000    1061\n",
-       "38000    1061\n",
-       "92000    1061\n",
-       "36000    1061\n",
-       "35000    1061\n",
-       "34000    1061\n",
-       "33000    1061\n",
-       "42000    1061\n",
-       "31000    1061\n",
-       "25000    1061\n",
-       "24000    1061\n",
-       "23000    1061\n",
-       "21000    1061\n",
-       "13000    1061\n",
-       "83000    1060\n",
-       "85000    1060\n",
-       "93000    1060\n",
-       "84000    1060\n",
-       "51000    1060\n",
-       "43000    1060\n",
-       "37000    1060\n",
-       "32000    1060\n",
-       "64000    1060\n",
-       "81000    1059\n",
-       "82000    1058\n",
-       "54000    1007\n",
+       "64000    1065\n",
+       "12000    1065\n",
+       "62000    1065\n",
+       "92000    1065\n",
+       "24000    1065\n",
+       "73000    1065\n",
+       "35000    1065\n",
+       "63000    1065\n",
+       "46000    1065\n",
+       "93000    1065\n",
+       "32000    1065\n",
+       "42000    1065\n",
+       "25000    1065\n",
+       "72000    1065\n",
+       "55000    1065\n",
+       "38000    1065\n",
+       "21000    1065\n",
+       "85000    1065\n",
+       "45000    1065\n",
+       "13000    1065\n",
+       "61000    1065\n",
+       "44000    1065\n",
+       "11000    1065\n",
+       "41000    1065\n",
+       "56000    1065\n",
+       "71000    1065\n",
+       "52000    1065\n",
+       "33000    1065\n",
+       "31000    1065\n",
+       "83000    1065\n",
+       "34000    1065\n",
+       "91000    1065\n",
+       "57000    1065\n",
+       "23000    1065\n",
+       "53000    1065\n",
+       "36000    1065\n",
+       "84000    1064\n",
+       "37000    1064\n",
+       "43000    1064\n",
+       "51000    1064\n",
+       "81000    1063\n",
+       "82000    1062\n",
+       "54000    1011\n",
        "Name: ARRON, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 7,
    "id": "4926bae5",
    "metadata": {
     "scrolled": true
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 8,
    "id": "3f51ca6f",
    "metadata": {},
    "outputs": [
@@ -244,7 +245,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "54000 18\n"
+      "54000 19\n"
      ]
     }
    ],
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 9,
    "id": "c1fe036d",
    "metadata": {
     "scrolled": true
@@ -263,11 +264,39 @@
    "source": [
     "week_mor_mun.to_csv('out/weekly_mortality_with_linear_interpolated_population_data.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4d24ea5",
+   "metadata": {},
+   "source": [
+    "# Mortality Dataframe for Meta-Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(mortality_url)\n",
+    "df.rename(columns = {'N_MASK':'N_DEATHS'}, inplace = True)\n",
+    "df['WEEK'] = df['YEAR_WEEK'].str.slice(start=6).astype('int') # get week number\n",
+    "df = df[df.COD != 'external'] # do not need data for external causes of death\n",
+    "df = df[df.ARRON != 58000] # data for Arrondissement de La Louvière is only available for 2019 and therefore has been removed from dataset\n",
+    "df = df.sort_values(by = ['YEAR_WEEK', 'ARRON'])\n",
+    "df.to_csv('out/mortality.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "398b0065f50162c1b8c4880c29c8a5eec687976cc28c806c28ee5adb796fb9de"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -281,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   },
   "varInspector": {
    "cols": {
