added relative path
added relative path to place (and use) output files in the correct folder

--- a/code/05_Maps_trends_heatwaves (1).ipynb
+++ b/code/05_Maps_trends_heatwaves (1).ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {
     "executionInfo": {
      "elapsed": 1126,
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {
     "executionInfo": {
      "elapsed": 348,
@@ -77,13 +77,13 @@
    },
    "outputs": [],
    "source": [
-    "Belgium_map = gpd.GeoDataFrame.from_file('arrondissements_shape.shp') #it works ony if we upload the files to the session manually, but not if we indicate the path in the folder. \n",
+    "Belgium_map = gpd.GeoDataFrame.from_file('../data/arrondissements_shape/arrondissements_shape.shp') #it works ony if we upload the files to the session manually, but not if we indicate the path in the folder. \n",
     "#All four files (.dbf, .ptj, .shp, .shx) should be in the same folder, otherwise there are errors with reading the shapefile."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -204,7 +204,7 @@
        "4  POLYGON ((643772.195 692449.425, 643815.652 69...  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -250,7 +250,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {
     "executionInfo": {
      "elapsed": 206,
@@ -485,13 +485,13 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "heat_fr = pd.read_csv('hw_freq_df.csv')\n",
+    "heat_fr = pd.read_csv('../out/hw_freq_df.csv')\n",
     "heat_fr.head()"
    ]
   },
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -590,7 +590,7 @@
        "4  POLYGON ((643772.195 692449.425, 643815.652 69...  23000"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -666,16 +666,16 @@
        "      <th>1987</th>\n",
        "      <th>1988</th>\n",
        "      <th>...</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>2020</th>\n",
+       "      <th>1980-1989</th>\n",
+       "      <th>1990-1999</th>\n",
        "      <th>2000-2009</th>\n",
        "      <th>2010-2019</th>\n",
-       "      <th>1980-1984</th>\n",
-       "      <th>1985-1989</th>\n",
-       "      <th>1990-1994</th>\n",
-       "      <th>1995-1999</th>\n",
-       "      <th>2000-2004</th>\n",
-       "      <th>2005-2009</th>\n",
-       "      <th>2010-2014</th>\n",
-       "      <th>2015-2019</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -692,15 +692,15 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.8</td>\n",
        "      <td>1.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.4</td>\n",
+       "      <td>1.5</td>\n",
        "      <td>1.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -716,15 +716,15 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.8</td>\n",
        "      <td>1.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.4</td>\n",
+       "      <td>1.5</td>\n",
        "      <td>1.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -740,15 +740,15 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
        "      <td>1.2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>1.6</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -764,16 +764,16 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1.7</td>\n",
        "      <td>1.5</td>\n",
        "      <td>1.1</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -788,48 +788,41 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.8</td>\n",
        "      <td>1.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.4</td>\n",
+       "      <td>1.5</td>\n",
        "      <td>1.4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 54 columns</p>\n",
+       "<p>5 rows × 46 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   arron  1980  1981  1982  1983  1984  1985  1986  1987  1988  ...  \\\n",
-       "0  41000     1     0     0     0     2     0     4     0     1  ...   \n",
-       "1  11000     1     0     0     0     2     0     4     0     1  ...   \n",
-       "2  81000     3     0     2     0     2     0     4     0     1  ...   \n",
-       "3  51000     1     0     0     0     2     0     4     0     1  ...   \n",
-       "4  45000     1     0     0     0     2     0     4     0     1  ...   \n",
+       "   arron  1980  1981  1982  1983  1984  1985  1986  1987  1988  ...  2015  \\\n",
+       "0  41000     1     0     0     0     2     0     4     0     1  ...     1   \n",
+       "1  11000     1     0     0     0     2     0     4     0     1  ...     1   \n",
+       "2  81000     3     0     2     0     2     0     4     0     1  ...     2   \n",
+       "3  51000     1     0     0     0     2     0     4     0     1  ...     1   \n",
+       "4  45000     1     0     0     0     2     0     4     0     1  ...     1   \n",
        "\n",
-       "   2000-2009  2010-2019  1980-1984  1985-1989  1990-1994  1995-1999  \\\n",
-       "0        1.5        1.4        0.6        1.0        0.6        2.4   \n",
-       "1        1.5        1.4        0.6        1.0        0.6        2.4   \n",
-       "2        1.6        2.0        1.4        1.0        1.2        2.0   \n",
-       "3        1.5        1.1        0.6        1.0        0.8        2.6   \n",
-       "4        1.5        1.4        0.6        1.0        0.6        2.4   \n",
+       "   2016  2017  2018  2019  2020  1980-1989  1990-1999  2000-2009  2010-2019  \n",
+       "0     1     1     1     3     5        0.8        1.5        1.5        1.4  \n",
+       "1     1     1     1     3     5        0.8        1.5        1.5        1.4  \n",
+       "2     2     0     4     2     5        1.2        1.6        1.6        2.0  \n",
+       "3     1     0     2     2     5        0.8        1.7        1.5        1.1  \n",
+       "4     1     1     1     3     5        0.8        1.5        1.5        1.4  \n",
        "\n",
-       "   2000-2004  2005-2009  2010-2014  2015-2019  \n",
-       "0        2.0        1.0        1.4        1.4  \n",
-       "1        2.0        1.0        1.4        1.4  \n",
-       "2        2.2        1.0        2.0        2.0  \n",
-       "3        2.0        1.0        1.0        1.2  \n",
-       "4        2.0        1.0        1.4        1.4  \n",
-       "\n",
-       "[5 rows x 54 columns]"
+       "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1069,7 +1062,7 @@
        "[5 rows x 54 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {
     "executionInfo": {
      "elapsed": 207,
@@ -1115,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1199,7 +1192,7 @@
        "4  POLYGON ((643772.195 692449.425, 643815.652 69...  23000"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 21,
    "metadata": {
     "executionInfo": {
      "elapsed": 218,
@@ -1429,7 +1422,7 @@
        "[5 rows x 55 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1450,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1476,7 +1469,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1517,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1575,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1635,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 25,
    "metadata": {
     "executionInfo": {
      "elapsed": 205,
@@ -1838,13 +1831,13 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "heat_intens = pd.read_csv('hw_int_df.csv')\n",
+    "heat_intens = pd.read_csv('../out/hw_int_df.csv')\n",
     "heat_intens.head()"
    ]
   },
@@ -1859,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2074,7 +2067,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2098,7 +2091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2313,7 +2306,7 @@
        "[5 rows x 54 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2337,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2552,7 +2545,7 @@
        "[5 rows x 55 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2573,7 +2566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2631,7 +2624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2690,7 +2683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3959,7 +3952,7 @@
        "[44 rows x 54 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3979,7 +3972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4020,7 +4013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4056,7 +4049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4140,7 +4133,7 @@
        "1984     2.0       2.0"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4164,7 +4157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4190,7 +4183,7 @@
        "<AxesSubplot:title={'center':'Heat waves frequency in Brussels (NIS code 21000) and Leuven (NIS code 24000)'}, ylabel='Number of heat waves per year'>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4216,7 +4209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5485,7 +5478,7 @@
        "[44 rows x 54 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5505,7 +5498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -5546,7 +5539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5630,7 +5623,7 @@
        "1984   1.550     1.350"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5654,7 +5647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5680,7 +5673,7 @@
        "<AxesSubplot:title={'center':'Heat waves intensity in Brussels (NIS code 21000) and Leuven (NIS code 24000)'}, ylabel='Intensity of heat waves (°C)'>"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
