--- a/code/04_create_heatwave_frequency_and_intensity_dataframe_1980-2020.ipynb
+++ b/code/04_create_heatwave_frequency_and_intensity_dataframe_1980-2020.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "id": "xQRHY6xG7HbD"
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "id": "oqt8rfw07R2N"
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -172,7 +172,7 @@
        "4              0.9              2.7  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -280,7 +280,7 @@
        "4     64000            Waremme  50.662789  5.206501"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -441,7 +441,7 @@
        "74880             -1.6              0.3  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "id": "BbQc3-hkv5PM"
    },
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -614,7 +614,7 @@
        "[264 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -736,7 +736,7 @@
        "7     31000   102094"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -978,7 +978,7 @@
        "[658944 rows x 9 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1198,7 +1198,7 @@
        "[658944 rows x 8 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1378,7 +1378,7 @@
        "[1804 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "id": "wjN7sMNNsZH3"
    },
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1688,7 +1688,7 @@
        "[658944 rows x 12 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1993,7 +1993,7 @@
        "[658944 rows x 13 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2005,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2080,7 +2080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2105,7 +2105,7 @@
        "array([0, 0, 0, ..., 0, 0, 0])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2122,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "id": "Z8z0KQ8Beh8i"
    },
@@ -2138,7 +2138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2166,7 +2166,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2177,7 +2177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2373,7 +2373,7 @@
        "[658944 rows x 7 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2387,7 +2387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2514,7 +2514,7 @@
        "4  26.125                 0           -21.125  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2535,7 +2535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {
     "id": "B6EZsI0CX9Sw"
    },
@@ -2571,7 +2571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2779,7 +2779,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2790,7 +2790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2998,7 +2998,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3018,7 +3018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3038,76 +3038,18 @@
     "outputId": "1f1bc680-e39b-426f-85bb-82ae8efb63c3",
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "    async function download(id, filename, size) {\n",
-       "      if (!google.colab.kernel.accessAllowed) {\n",
-       "        return;\n",
-       "      }\n",
-       "      const div = document.createElement('div');\n",
-       "      const label = document.createElement('label');\n",
-       "      label.textContent = `Downloading \"${filename}\": `;\n",
-       "      div.appendChild(label);\n",
-       "      const progress = document.createElement('progress');\n",
-       "      progress.max = size;\n",
-       "      div.appendChild(progress);\n",
-       "      document.body.appendChild(div);\n",
-       "\n",
-       "      const buffers = [];\n",
-       "      let downloaded = 0;\n",
-       "\n",
-       "      const channel = await google.colab.kernel.comms.open(id);\n",
-       "      // Send a message to notify the kernel that we're ready.\n",
-       "      channel.send({})\n",
-       "\n",
-       "      for await (const message of channel.messages) {\n",
-       "        // Send a message to notify the kernel that we're ready.\n",
-       "        channel.send({})\n",
-       "        if (message.buffers) {\n",
-       "          for (const buffer of message.buffers) {\n",
-       "            buffers.push(buffer);\n",
-       "            downloaded += buffer.byteLength;\n",
-       "            progress.value = downloaded;\n",
-       "          }\n",
-       "        }\n",
-       "      }\n",
-       "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-       "      const a = document.createElement('a');\n",
-       "      a.href = window.URL.createObjectURL(blob);\n",
-       "      a.download = filename;\n",
-       "      div.appendChild(a);\n",
-       "      a.click();\n",
-       "      div.remove();\n",
-       "    }\n",
-       "  "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "download(\"download_a5dfd998-e429-4426-888a-6b6a5e0626f8\", \"hw_int_df.csv\", 20640)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "hw_int_df.to_csv('hw_int_df.csv', encoding = 'utf-8-sig', index=False) \n",
-    "hw_count_df.to_csv('hw_freq_df.csv', encoding = 'utf-8-sig', index=False) "
+    "hw_int_df.to_csv('../out/hw_int_df.csv', encoding = 'utf-8-sig', index=False) \n",
+    "hw_count_df.to_csv('../out/hw_freq_df.csv', encoding = 'utf-8-sig', index=False) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
