Validated the pipeline structure
Made sure all files in out were created in the code and made sure all codes work as expected.

--- a/code/06_EDA_2.ipynb
+++ b/code/06_EDA_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "id": "ce528be2",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "id": "cfbcc329",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "3805ed34",
    "metadata": {
     "scrolled": true
@@ -1233,7 +1233,7 @@
        "[44 rows x 42 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "id": "5c21c784",
    "metadata": {},
    "outputs": [
@@ -1320,7 +1320,7 @@
        "1984       2         2"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "id": "30531bc8",
    "metadata": {},
    "outputs": [
@@ -1359,7 +1359,7 @@
        "<AxesSubplot:title={'center':'Heat waves frequency in Brussels (NIS code 21000) and Leuven (NIS code 24000)'}, ylabel='Number of heat waves per year'>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1380,7 +1380,7 @@
     "fig, ax = plt.subplots(1, 1)\n",
     "ax.set(title = \"Heat waves frequency in Brussels (NIS code 21000) and Leuven (NIS code 24000)\", \n",
     "       ylabel = \"Number of heat waves per year\")\n",
-    "hw_freq_Bru.plot(ax=ax, figsize=(10,5), legend= \"True\")Plot the heat frequncies in Brussels and Leuven"
+    "hw_freq_Bru.plot(ax=ax, figsize=(10,5), legend= \"True\")"
    ]
   },
   {
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "id": "84c4e5d8",
    "metadata": {},
    "outputs": [
@@ -1463,7 +1463,7 @@
        "1984   1.550     1.350"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "id": "3534edd2",
    "metadata": {},
    "outputs": [
@@ -1510,7 +1510,7 @@
        "<AxesSubplot:title={'center':'Heat waves intensity in Brussels (NIS code 21000) and Leuven (NIS code 24000)'}, ylabel='Intensity of heat waves (°C)'>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1531,8 +1531,16 @@
     "fig, ax = plt.subplots(1, 1)\n",
     "ax.set(title = \"Heat waves intensity in Brussels (NIS code 21000) and Leuven (NIS code 24000)\", \n",
     "       ylabel = \"Intensity of heat waves (°C)\")\n",
-    "hw_int_Brussels (potential heat island, NIS code 21000) and Halle-Vilvoorde (surrounding area, NIS code 23000) have the same data for some reason. So Brussels and Leuven (next closest arrondisement. NIS code 24000) are taken for checking is there a heat island effect.Bru.plot(ax=ax, figsize=(10,5), legend= \"True\")"
+    "hw_int_Bru.plot(ax=ax, figsize=(10,5), legend= \"True\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a0a7cbc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
