--- a/code/05_Maps_trends_heatwaves (1).ipynb
+++ b/code/05_Maps_trends_heatwaves (1).ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 1126,
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 348,
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -205,7 +205,7 @@
        "4  POLYGON ((643772.195 692449.425, 643815.652 69...  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -251,7 +251,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {
     "executionInfo": {
      "elapsed": 206,
@@ -486,7 +486,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -794,7 +794,7 @@
        "4  POLYGON ((643772.195 692449.425, 643815.652 69...  23000"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,11 +807,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_10years = ['1980-1989', '1990-1999', '2000-2009', '2010-2019'] # needs to be created automatically for pipeline\n",
+    "list_10years = ['1980-1989', '1990-1999', '2000-2009', '2010-2019']\n",
     "list_5years = ['1980-1984', '1985-1989', '1990-1994', '1995-1999', '2000-2004', '2005-2009', '2010-2014', '2015-2019']\n",
     "\n",
     "# this function produces graphs for specific time intervals for frequency or intensity of heatwave\n",
@@ -830,23 +830,25 @@
     "    for i in list_year_intervals:\n",
     "        start_str = i.split('-')[0]\n",
     "        end_str = i.split('-')[1]\n",
-    "        df[i] = df.loc[: , start_str:end_str].mean(axis=1)\n",
+    "        Belgium_shapes_merge[i] = Belgium_shapes_merge.loc[: , start_str : end_str].mean(axis=1)\n",
     "    \n",
     "    fig, axees = plt.subplots(nrows=1, ncols=len(list_year_intervals), figsize=(18, 6))\n",
     "    divider = make_axes_locatable(axees[-1])\n",
     "    cax = divider.append_axes(\"right\", size=\"5%\", pad=0)\n",
-    "    vmin, vmax = 0, 4 # needs to be adapted for pipeline\n",
-    "    for i, k in enumerate(axees):\n",
+    "    vmin, vmax = 0, 4\n",
+    "    for ix, k in enumerate(axees):\n",
     "        k.set_axis_off()\n",
-    "        k = Belgium_shapes_merge.plot(ax=k, column=list_year_intervals[i], cmap=colors, legend=True, cax=cax, vmin=vmin, vmax=vmax)\n",
-    "        k.set_title(list_year_intervals[i])\n",
+    "        k = Belgium_shapes_merge.plot(ax=k, column=list_year_intervals[ix], cmap=colors, legend=True, cax=cax, vmin=vmin, vmax=vmax)\n",
+    "        k.set_title(list_year_intervals[ix])\n",
     "    return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -862,14 +864,14 @@
     }
    ],
    "source": [
-    "# chart for frequency for every 10 years\n",
+    "# chart for frequency for every 10 years (run a second time if it does not work)\n",
     "data_type='freq'\n",
     "get_interval_intensity_or_count(list_10years, data_type)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -888,14 +890,14 @@
     }
    ],
    "source": [
-    "# chart for frequency for every 5 years\n",
+    "# chart for frequency for every 5 years (run a second time if it does not work)\n",
     "data_type = 'freq'\n",
     "get_interval_intensity_or_count(list_5years, data_type)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -914,14 +916,14 @@
     }
    ],
    "source": [
-    "# chart for intensity for every 10 years\n",
+    "# chart for intensity for every 10 years (run a second time if it does not work)\n",
     "data_type = 'intensity'\n",
     "get_interval_intensity_or_count(list_10years, data_type)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -938,14 +940,14 @@
     }
    ],
    "source": [
-    "# chart for intensity for every 5 years\n",
+    "# chart for intensity for every 5 years (run a second time if it does not work)\n",
     "data_type = 'intensity'\n",
     "get_interval_intensity_or_count(list_5years, data_type)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -971,7 +973,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
